# specializing-scatter-gather

./: .gitignore  README.md
cpu_sender/: CMakeLists.txt  README.md  basic_sender.cpp  basic_sender.h  sender_batching.cpp  sender_incast.cpp  sender_rate.cpp
cpu_sender/cmake/Modules/: FindLibEvent.cmake
cpu_sender/examples/: background_workers_example.txt  output_example.txt  rate_config_example.txt  workers_example.txt
cpu_sender/measure_resources/: CMakeLists.txt  README.md  measure_cpu.cpp
cpu_sender/utils/: ThreadPool.cpp  ThreadPool.h  containers.h  rate-control-info.h  string_utils.cpp
ns3/: README.md
ns3/basic-sim/src/basic-sim/helper/: flow-send-helper.cc  flow-send-helper.h
ns3/basic-sim/src/basic-sim/model/: basic-sim.cc  basic-sim.h  flow-send-application.cc  flow-send-application.h  replace-ipv4-global-routing.cc.txt  replace-ipv4-global-routing.h.txt  schedule-reader.cc  schedule-reader.h  simon-util.cc  simon-util.h  topology.cc  topology.h
ns3/internet/: wscript
ns3/runs/example-batching/: config.properties
ns3/runs/example-incast/: config.properties
ns3/runs/example-poisson/: config.properties
ns3/runs/example-scheduled/: config.properties
ns3/runs/example-tcp-background/: config.properties
ns3/scatter-gather-sim/src/basic-sim/: wscript
ns3/scatter-gather-sim/src/basic-sim/helper/: incast-worker-helper.cc  incast-worker-helper.h  scheduled-worker-helper.cc  scheduled-worker-helper.h
ns3/scatter-gather-sim/src/basic-sim/model/: batch-info.h  batching-simulation.cc  batching-simulation.h  fixed-frontend.cc  fixed-frontend.h  frontend.cc  frontend.h  incast-frontend.cc  worker.cc  (+29 more)
ns3/scratch/main/: main.cc
plotting/: cdf_plots.py  comparison_plots.py  compute_theoretical_time.py  cpu_plots.py  read_raw_file.py  requirements.txt
worker/: CMakeLists.txt  README.md  base_worker.cpp  base_worker.h  worker_background.cpp  worker_incast.cpp  worker_rate.cpp
worker/config/: background_config.h  base_config.h  rate_config.h  string_utils.cpp  string_utils.h
worker/config/examples/: background_example.config  base_example.config  rate_example.config
